# orchlet

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bindings/: chat.ts  common.ts  contact.ts  data_integrity.ts  member.ts  notification.ts  orchestration.ts  settings.ts  skill.ts  terminal.ts  workspace.ts
src-tauri/capabilities/: default.json  notification-preview.json  terminal.json  workspace-selection.json
src-tauri/migrations/global/: 202605121200__contacts.sql
src-tauri/migrations/workspace/: 202605112300__members.sql  202605120930__member_permissions.sql  202605121210__private_conversations.sql  202605121300__conversation_list_groups.sql  202605121430__messages_read_positions.sql  202605121600__conversation_management.sql  202605121700__message_mentions.sql  202605121900__terminal_tabs.sql  202605122000__dispatch_requests.sql  202605122100__diagnostics_runs.sql  202605130930__member_avatar.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/chat/: mod.rs
src-tauri/src/app/contacts/: mod.rs
src-tauri/src/app/data_integrity/: mod.rs
src-tauri/src/app/diagnostics/: mod.rs
src-tauri/src/app/members/: mod.rs
src-tauri/src/app/notification/: mod.rs
src-tauri/src/app/orchestration/: mod.rs
src-tauri/src/contracts/: chat.rs  common.rs  contact.rs  data_integrity.rs  diagnostics.rs  member.rs  mod.rs  notification.rs  orchestration.rs  roadmap.rs  settings.rs  skill.rs  terminal.rs  workspace.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/gateway/: chat_commands.rs  contact_commands.rs  data_integrity_commands.rs  diagnostics_commands.rs  member_commands.rs  mod.rs  notification_commands.rs  orchestration_commands.rs  roadmap_commands.rs  settings_commands.rs  skills_commands.rs  terminal_commands.rs  workspace_commands.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/tests/: contract_fixtures.rs  schema_data_fixtures.rs  smoke_scaffold.rs
(+437 files in other folders)
