[package]
name = "orchlet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orchlet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["tray-icon", "image-png", "macos-private-api"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
ts-rs = "12.0.1"
tauri-plugin-dialog = "2.7.1"
ulid = "1.2.1"
tauri-plugin-opener = "2.5.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
portable-pty = "0.9.0"
redb = "2"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.27.0"
